import "ydb/core/protos/counters.proto";

package NKikimr.NSysView;

option java_package = "ru.yandex.kikimr.proto";

option (TabletTypeName) = "SysViewProcessor";

enum ETxTypes {
    TXTYPE_INIT_SCHEMA = 0      [(TxTypeOpts) = {Name: "TxInitSchema"}];
    TXTYPE_INIT = 1             [(TxTypeOpts) = {Name: "TxInit"}];
    TXTYPE_CONFIGURE = 2        [(TxTypeOpts) = {Name: "TxConfigure"}];
    TXTYPE_COLLECT = 3          [(TxTypeOpts) = {Name: "TxCollect"}];
    TXTYPE_AGGREGATE = 4        [(TxTypeOpts) = {Name: "TxAggregate"}];
    TXTYPE_INTERVAL_SUMMARY = 5 [(TxTypeOpts) = {Name: "TxIntervalSummary"}];
    TXTYPE_INTERVAL_METRICS = 6 [(TxTypeOpts) = {Name: "TxIntervalMetrics"}];
    TXTYPE_TOP_PARTITIONS = 7   [(TxTypeOpts) = {Name: "TxTopPartitions"}];
}
